<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forklift_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="victor.w.boyd@gmail.com">victor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros-humble-xacro</exec_depend>
  <exec_depend>ros-humble-joint-state-publisher-gui</exec_depend>
  <exec_depend>ros-humble-ros2-control</exec_depend>
  <exec_depend>ros-humble-ros2-controllers</exec_depend>
  <exec_depend>ros-humble-gazebo-ros-packages</exec_depend>
  <exec_depend>ros-humble-gazebo-ros2-control</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
